--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="ISO-8859-1" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link href="styles/style.css" rel="stylesheet" />
     <link rel="stylesheet"
